plugins {
    id 'war'
    id 'org.gretty' version '4.0.3'
}

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/milestone/" }
}

sourceCompatibility = 17

def springVersion = '6.0.0-RC2'
def springSecurityVersion = '6.0.0-RC2'
def jacksonVersion = '2.14.0'
def log4jVersion = '2.19.0'
def lombokVersion = '1.18.24'
def jsonWebTokenVersion = '0.11.5'
def junitVersion = '4.13.2'

dependencies {

    compileOnly group: 'jakarta.servlet',
            name: 'jakarta.servlet-api',
            version: '6.0.0'

    implementation group: 'org.springframework',
            name: 'spring-webmvc',
            version: springVersion

    implementation group: 'org.springframework.security',
            name: 'spring-security-web',
            version: springSecurityVersion

    implementation group: 'org.springframework.security',
            name: 'spring-security-config',
            version: springSecurityVersion

    implementation group: 'com.fasterxml.jackson.core',
            name: 'jackson-databind',
            version: jacksonVersion

    implementation group: 'org.apache.logging.log4j',
            name: 'log4j-api',
            version: log4jVersion

    implementation group: 'org.apache.logging.log4j',
            name: 'log4j-core',
            version: log4jVersion

    implementation group: 'io.jsonwebtoken',
            name: 'jjwt-api',
            version: jsonWebTokenVersion

    implementation group: 'io.jsonwebtoken',
            name: 'jjwt-impl',
            version: jsonWebTokenVersion

    implementation group: 'io.jsonwebtoken',
            name: 'jjwt-jackson',
            version: jsonWebTokenVersion

    compileOnly group: 'org.projectlombok',
            name: 'lombok',
            version: lombokVersion

    annotationProcessor group: 'org.projectlombok',
            name: 'lombok',
            version: lombokVersion

    testImplementation group: 'jakarta.servlet',
            name: 'jakarta.servlet-api',
            version: '6.0.0'

    testImplementation group: 'org.springframework',
            name: 'spring-test',
            version: springVersion

    testImplementation group: 'org.springframework.security',
            name: 'spring-security-test',
            version: springSecurityVersion

    testImplementation group: 'junit',
            name: 'junit',
            version: junitVersion

}

gretty {
    contextPath = '/'
}
